@@ -7,6 +7,7 @@ import org.bouncycastle.util.encoders.Base32;
 
 import java.io.File;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Arrays;
 
 @Slf4j
@@ -18,15 +19,15 @@ public class TorKeyUtils {
     }
 
     public static void writePrivateKey(TorKeyPair torKeyPair, Path storageDir, String tag) {
-        Path targetPath = Path.of(storageDir.toString(), tag);
+        Path targetPath = Paths.get(storageDir.toString(), tag);
         File torPrivateKeyDir = targetPath.toFile();
         try {
             log.info("Store the torPrivateKey into {}", torPrivateKeyDir);
             FileUtils.makeDirs(torPrivateKeyDir);
             String dir = torPrivateKeyDir.getAbsolutePath();
 
-            FileUtils.writeToFile(Hex.encode(torKeyPair.getPrivateKey()), Path.of(dir, "private_key_hex").toFile());
-            FileUtils.writeToFile(torKeyPair.getOnionAddress(), Path.of(dir, "hostname").toFile());
+            FileUtils.writeToFile(Hex.encode(torKeyPair.getPrivateKey()), Paths.get(dir, "private_key_hex").toFile());
+            FileUtils.writeToFile(torKeyPair.getOnionAddress(), Paths.get(dir, "hostname").toFile());
 
             log.info("We persisted the tor private key in hex encoding for onionAddress {} for tag {} to {}.",
                     torKeyPair.getOnionAddress(), tag, dir);
